added configuration for ossrh

--- a/AssertionLogger/pom.xml
+++ b/AssertionLogger/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.loka.autotesting</groupId>
+        <groupId>com.github.hlobka.autotesting</groupId>
         <artifactId>LoggerParent</artifactId>
         <version>1.0.2-SNAPSHOT</version>
     </parent>
     <artifactId>AssertionLogger</artifactId>
     <dependencies>
         <dependency>
-            <groupId>com.loka.autotesting</groupId>
+            <groupId>com.github.hlobka.autotesting</groupId>
             <artifactId>Logger</artifactId>
             <version>1.0.2-SNAPSHOT</version>
         </dependency>
@@ -42,7 +42,9 @@
                 <version>2.5</version>
                 <configuration>
                     <addSchema>false</addSchema>
+                    <preparationGoals>clean install</preparationGoals>
                     <goals>deploy</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
             </plugin>
         </plugins>
@@ -51,7 +53,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.1</version>
+                    <version>3.8.0</version>
                     <configuration>
                         <source>1.8</source>
                         <target>1.8</target>
